Continue refactoring